--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </select>
                 </div>
 
-                <details class="pt-2" open>
+                <details class="pt-2">
                     <summary class="flex justify-between items-center text-sm font-medium text-gray-600">
                         <span>6. 颜色与边框</span>
                         <svg class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -240,7 +240,7 @@
                     </div>
                 </details>
 
-                <details class="pt-2" open>
+                <details class="pt-2">
                     <summary class="flex justify-between items-center text-sm font-medium text-gray-600">
                         <span>7. 高级设置</span>
                         <svg class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
