--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- MODIFIED: Loaded more font weights -->
+    <!-- Loaded more font weights -->
     <link
         href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Kosugi+Maru&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Yuji+Syuku&display=swap"
         rel="stylesheet">
@@ -96,12 +96,12 @@
         
         #info-bar {
             position: relative;
-            overflow: hidden; 
+            overflow: hidden;  
         }
         .movable-block {
             position: absolute;
             top: 50%;
-            transform: translateY(-50%); 
+            transform: translateY(-50%);  
         }
 
         /* Cropper Modal Styles */
@@ -338,55 +338,55 @@
                                      <div>
                                         <label for="logo-x" class="text-sm text-gray-500">水平位置 (X): <span id="logo-x-value">8</span>px</label>
                                         <input type="range" id="logo-x" min="0" max="50" value="8" class="w-full">
-                                    </div>
+                                     </div>
                                      <div>
                                         <label for="logo-y" class="text-sm text-gray-500">垂直位置 (Y): <span id="logo-y-value">0</span>px</label>
                                         <input type="range" id="logo-y" min="-30" max="30" value="0" class="w-full">
-                                    </div>
+                                     </div>
                                 </div>
                                 <div class="p-2 border rounded-md">
                                      <p class="text-sm text-gray-600 font-semibold">团名位置</p>
                                      <div>
                                         <label for="group-name-x" class="text-sm text-gray-500">水平位置 (X): <span id="group-name-x-value">48</span>px</label>
                                         <input type="range" id="group-name-x" min="0" max="100" value="48" class="w-full">
-                                    </div>
+                                     </div>
                                      <div>
                                         <label for="group-name-y" class="text-sm text-gray-500">垂直位置 (Y): <span id="group-name-y-value">1</span>px</label>
                                         <input type="range" id="group-name-y" min="-30" max="30" value="1" class="w-full">
-                                    </div>
+                                     </div>
                                 </div>
                                 <div class="p-2 border rounded-md">
                                      <p class="text-sm text-gray-600 font-semibold">主题</p>
                                      <div>
                                         <label for="theme-x" class="text-sm text-gray-500">水平位置 (X): <span id="theme-x-value">-2</span>px</label>
                                         <input type="range" id="theme-x" min="-100" max="100" value="-2" class="w-full">
-                                    </div>
+                                     </div>
                                      <div>
                                         <label for="theme-y" class="text-sm text-gray-500">垂直位置 (Y): <span id="theme-y-value">0</span>px</label>
                                         <input type="range" id="theme-y" min="-30" max="30" value="0" class="w-full">
-                                    </div>
+                                     </div>
                                 </div>
                                 <div class="p-2 border rounded-md">
                                      <p class="text-sm text-gray-600 font-semibold">姓名位置</p>
                                      <div>
                                         <label for="name-x" class="text-sm text-gray-500">水平位置 (X): <span id="name-x-value">-12</span>px</label>
                                         <input type="range" id="name-x" min="-50" max="50" value="-12" class="w-full">
-                                    </div>
+                                     </div>
                                      <div>
                                         <label for="name-y" class="text-sm text-gray-500">垂直位置 (Y): <span id="name-y-value">0</span>px</label>
                                         <input type="range" id="name-y" min="-30" max="30" value="0" class="w-full">
-                                    </div>
+                                     </div>
                                 </div>
                                 <div class="p-2 border rounded-md">
                                      <p class="text-sm text-gray-600 font-semibold">罗马字位置</p>
                                      <div>
                                         <label for="romaji-x" class="text-sm text-gray-500">水平位置 (X): <span id="romaji-x-value">-12</span>px</label>
                                         <input type="range" id="romaji-x" min="-50" max="50" value="-12" class="w-full">
-                                    </div>
+                                     </div>
                                      <div>
                                         <label for="romaji-y" class="text-sm text-gray-500">垂直位置 (Y): <span id="romaji-y-value">14</span>px</label>
                                         <input type="range" id="romaji-y" min="-30" max="30" value="14" class="w-full">
-                                    </div>
+                                     </div>
                                 </div>
                             </div>
                         </div>
@@ -495,6 +495,36 @@
                     生成并下载图片
                 </button>
                 <p id="loading-text" class="text-center mt-4 text-sm text-gray-500 hidden">正在生成图片，请稍候...</p>
+
+                <!-- MODIFIED: Author Info & Feedback Section -->
+                <details class="pt-4 mt-2 border-t border-gray-200">
+                    <summary class="flex justify-between items-center text-sm font-medium text-gray-600">
+                        <span>作者信息 & 反馈</span>
+                        <svg class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                        </svg>
+                    </summary>
+                    <div class="mt-4 space-y-6 text-sm text-gray-600">
+                        <div>
+                            <h3 class="font-semibold text-gray-700 mb-2">作者信息</h3>
+                            <div class="space-y-1">
+                                <p>作者: <span class="font-mono">多线程败犬Yoru</span></p>
+                                <p>B站: <a href="https://space.bilibili.com/1598960?spm_id_from=333.1007.0.0" target="_blank" class="text-violet-600 hover:underline">多线程败犬Yoru</a></p>
+                                <p>稍转樱的小号: <a href="https://space.bilibili.com/348497813" target="_blank" class="text-violet-600 hover:underline">多线程败犬</a></p>
+                                <p>微博: <a href="https://weibo.com/u/2247228730" target="_blank" class="text-violet-600 hover:underline">多线程败犬Yoru</a></p>
+                                <p>没有人的Q群: <span class="font-mono">478628703</span></p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="font-semibold text-gray-700 mb-2">问题反馈 (Bugs/建议)</h3>
+                            <a href="https://forms.gle/xKJbXsUP4g8pLJSf7" target="_blank" rel="noopener noreferrer"
+                                id="feedback-link"
+                                class="block text-center mt-2 w-full bg-gray-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-gray-700 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">
+                                点击此处提交反馈
+                            </a>
+                        </div>
+                    </div>
+                </details>
             </div>
 
             <!-- 预览区域 -->
@@ -516,7 +546,7 @@
                                                 <path d="M5,90 L50,10 L95,90 Z"></path>
                                                 <path d="M95,90 L95,10 L85,10 L85,80 L50,80 L50,90 Z"></path>
                                             </svg>
-                                            <img id="image-logo" src="images/樱坂46logo.png" alt="Custom Logo" class="h-full w-auto" onerror="this.style.display='none'; document.getElementById('svg-logo').classList.remove('hidden');">
+                                            <img id="image-logo" src="https://upload.wikimedia.org/wikipedia/ja/thumb/2/2f/Sakurazaka46_logo.svg/200px-Sakurazaka46_logo.svg.png" alt="Custom Logo" class="h-full w-auto" onerror="this.style.display='none'; document.getElementById('svg-logo').classList.remove('hidden');">
                                         </div>
                                     </div>
                                     <div id="group-name-block" class="movable-block" style="left: 48px; transform: translateY(calc(-50% + 1px));">
@@ -684,14 +714,16 @@
 
             const colorPresets = {
                 '櫻坂46': { bg: '#FFFFFF', text: '#F19DB5', border: '#F19DB5', bodyBg: '#f0f2f5', titleColor: '#F19DB5' },
-                '乃木坂46': { bg: '#FFFFFF', text: '#742581', border: '#742581', bodyBg: '#f0f2f5', titleColor: '#742581' },
+                // MODIFIED: Nogizaka colors updated
+                '乃木坂46': { bg: '#742581', text: '#FFFFFF', border: '#742581', bodyBg: '#f0f2f5', titleColor: '#742581' },
                 '日向坂46': { bg: '#7cc7e8', text: '#FFFFFF', border: '#7cc7e8', bodyBg: '#7cc7e8', titleColor: '#FFFFFF' }
             };
             
             const groupLogos = {
-                '櫻坂46': 'images/樱坂46logo.png',
-                '日向坂46': 'images/日向坂46logo.png',
-                '乃木坂46': 'images/乃木坂46logo.png'
+                // Using public URLs for logos
+                '櫻坂46': 'https://upload.wikimedia.org/wikipedia/ja/thumb/2/2f/Sakurazaka46_logo.svg/200px-Sakurazaka46_logo.svg.png',
+                '日向坂46': 'https://upload.wikimedia.org/wikipedia/ja/thumb/8/8c/Hinatazaka46_logo.svg/200px-Hinatazaka46_logo.svg.png',
+                '乃木坂46': 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Nogizaka46_logo.svg/200px-Nogizaka46_logo.svg.png'
             };
 
             let imageState = { scale: 1, translateX: 0, translateY: 0 };
@@ -956,7 +988,7 @@
                 ui.downloadBtn.addEventListener('click', handleDownload);
                 ui.closeModalBtn.addEventListener('click', () => ui.errorModal.classList.add('hidden'));
 
-                // --- NEW: Listeners for font weight number inputs and ticks ---
+                // Listeners for font weight number inputs and ticks
                 const weightControls = [
                     { slider: ui.groupNameWeight, input: ui.groupNameWeightInput },
                     { slider: ui.themeWeight, input: ui.themeWeightInput },
@@ -1100,7 +1132,7 @@
                         const drawY = infoBarY + y;
 
                         if (item.isLogo) {
-                            const logoTarget = ui.imageLogo.src && !ui.imageLogo.classList.contains('hidden') ? ui.imageLogo : ui.svgLogo;
+                            const logoTarget = ui.imageLogo.src && !ui.imageLogo.classList.contains('hidden') && ui.imageLogo.complete ? ui.imageLogo : ui.svgLogo;
                             if (logoTarget.tagName === 'IMG') {
                                 ctx.drawImage(logoTarget, drawX, drawY, elRect.width, elRect.height);
                             } else {
