--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
                 <details class="pt-2">
                     <summary class="flex justify-between items-center text-sm font-medium text-gray-600">
-                        <span>7. 高级设置</span>
+                        <span>7. 更多设置</span>
                         <svg class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
                             </path>
@@ -298,7 +298,7 @@
                                 <div>
                                     <label for="info-bar-padding-y" class="text-sm text-gray-500">信息栏内边距: <span
                                             id="info-bar-padding-y-value">22</span>px</label>
-                                    <input type="range" id="info-bar-padding-y" min="0" max="40" value="22" class="w-full">
+                                    <input type="range" id="info-bar-padding-y" min="0" max="40" value="20" class="w-full">
                                 </div>
                                 <div>
                                     <label for="logo-size" class="text-sm text-gray-500">Logo大小: <span
