--- a/index.html
+++ b/index.html
@@ -495,11 +495,13 @@
                         <div>
                             <h3 class="font-semibold text-gray-700 mb-2" data-translate="authorInfoLabel">作者信息</h3>
                             <div class="space-y-1">
-                                <p data-translate="authorName">作者: <span class="font-mono">多线程败犬Yoru</span></p>
+                                <p data-translate="authorName">作者: <span class="font-mono">Yoru</span></p>
                                 <p>B站: <a href="https://space.bilibili.com/1598960?spm_id_from=333.1007.0.0" target="_blank" class="text-violet-600 hover:underline">多线程败犬Yoru</a></p>
-                                <p data-translate="altAccount">稍转樱的小号: <a href="https://space.bilibili.com/348497813" target="_blank" class="text-violet-600 hover:underline">多线程败犬</a></p>
+                                <p>稍转樱的小号: <a href="https://space.bilibili.com/348497813?spm_id_from=333.1365.0.0" target="_blank" class="text-violet-600 hover:underline">多线程败犬</a></p>
                                 <p>微博: <a href="https://weibo.com/u/2247228730" target="_blank" class="text-violet-600 hover:underline">多线程败犬Yoru</a></p>
                                 <p data-translate="qqGroup">没有人的Q群: <span class="font-mono">478628703</span></p>
+                                <p>改Logo用提取码:bq6k : <a href="https://pan.baidu.com/s/1bCMrwA9ZcW1tdghcznjfgQ?pwd=bq6k
+                                    " target="_blank" class="text-violet-600 hover:underline">SVG图片</a></p>
                             </div>
                         </div>
                         <div>
