--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 authorAndFeedbackLabel: "Author & Feedback",
                 authorInfoLabel: "Author Info",
                 authorName: "Author: Yoru",
-                altAccount: "Alt Account: 多线程败犬",
+                altAccount: "Alt Account: Yoru0908",
                 qqGroup: "QQ Group: 478628703",
                 feedbackLabel: "Feedback (Bugs/Suggestions)",
                 feedbackButton: "Click here to submit feedback",
@@ -751,8 +751,8 @@
                 loadingText: "画像を生成しています、しばらくお待ちください...",
                 authorAndFeedbackLabel: "作者情報とフィードバック",
                 authorInfoLabel: "作者情報",
-                authorName: "作者: 多线程败犬Yoru",
-                altAccount: "Bilibiliサブ垢: 多线程败犬",
+                authorName: "作者: Yoru",
+                altAccount: "Bilibiliサブ垢: Yoru0908",
                 qqGroup: "QQグループ: 478628703",
                 feedbackLabel: "フィードバック (バグ/提案)",
                 feedbackButton: "こちらをクリックしてフィードバックを送信",
@@ -824,9 +824,9 @@
                 generateButton: "生成并下载图片",
                 loadingText: "正在生成图片，请稍候...",
                 authorAndFeedbackLabel: "作者信息 & 反馈",
-                authorInfoLabel: "作者信息",
-                authorName: "作者: 多线程败犬Yoru",
-                altAccount: "稍转樱的小号: 多线程败犬",
+                authorInfoLabel: "作者",
+                authorName: "作者: Yoru",
+                altAccount: "稍转樱的小号: Yoru0908",
                 qqGroup: "没有人的Q群: 478628703",
                 feedbackLabel: "问题反馈 (Bugs/建议)",
                 feedbackButton: "点击此处提交反馈",
