--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             </div>
                             <div>
                                 <label for="info-color" class="block text-sm text-gray-500"
-                                    data-translate="textColorLabel">文字/Logo颜色</label>
+                                    data-translate="textColorLabel">文字颜色</label>
                                 <input type="color" id="info-color" value="#F19DB5"
                                     class="mt-1 w-full h-8 p-0 border-gray-300 rounded cursor-pointer">
                                 <div class="flex space-x-2 mt-2 swatch-container" data-target="info-color">
