--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div>
                     <label for="group-name-select" class="block text-sm font-semibold text-gray-600 mb-2"
-                        data-translate="groupNameLabel">2. 团体名字</label>
+                        data-translate="groupNameLabel">2. 样式选择</label>
                     <select id="group-name-select"
                         class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-violet-500">
                         <option value="櫻坂46" selected>櫻坂46</option>
